tests/sema/veo/94_error_return_value_in_void_func.veo
func ghost() {
    // expected-error@+1: cannot implicitly cast 'i32' to 'noth'
    return 42;
}
